# ekranoplano_v4

./: bloques_estables.txt  codigo_funciones_matlab.txt  conexiones_estables.txt  goto_from_tags_estables.txt  goto_tags_estables.txt  main_V4.m  rot_body_to_ned.m
gazebo/: vuelo.world
gazebo/models/mi_ekranoplano/: model.config  model.sdf
gazebo/models/mi_ekranoplano/meshes/: AIRFISH-8_EKRANOPLANO.dae  MODELO_EKRANOPLANO.dae
gazebo/models/rosa_referencia/: model.config  model.sdf
pid_control_v4/: CMakeLists.txt  package.xml  packageInfo.mat
pid_control_v4/include/pid_control_v4/: multiword_types.h  pid_control_V4.h  pid_control_V4_private.h  pid_control_V4_types.h  ros2nodeinterface.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rtmodel.h  rtwtypes.h  slros2_initialize.h  slros_busmsg_conversion.cpp  visibility_control.h  zero_crossing_types.h
pid_control_v4/src/: main.cpp  pid_control_V4.cpp  pid_control_V4_data.cpp  ros2nodeinterface.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  slros2_initialize.cpp
